--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "latest",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "4.0.4",
     "redux-devtools-extension": "2.13.8",
