--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "vao-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bitarov.github.io/vao-demo",
   "dependencies": {
     "axios": "0.19.0",
+    "gh-pages": "^2.1.1",
     "lodash": "4.17.15",
     "prop-types": "15.7.2",
     "react": "^16.9.0",
@@ -20,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
