--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "homepage": "https://bitarov.github.io/vao-demo",
   "dependencies": {
     "axios": "0.19.0",
-    "gh-pages": "^2.1.1",
     "lodash": "4.17.15",
     "prop-types": "15.7.2",
     "react": "^16.9.0",
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
