--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "redux": "4.0.4",
     "redux-devtools-extension": "2.13.8",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
